Change Facebook link

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </section>
         <section id="contact-me">
             <h2>Contact Me</h2>
-            <a href="https://www.facebook.com/michel.bourgeois.9?ref=bookmarks" target="_blank">
+            <a href="https://www.facebook.com/michel.bourgeois.9/" target="_blank">
                 <img src="facebook-icon.png" id="facebook-icon">
             </a>
             <a href="mailto:m2bourge@uwaterloo.ca" target="_blank">
